start new project

--- a/site/index.html
+++ b/site/index.html
@@ -9,15 +9,11 @@
         <meta name="description" content="De website als jij een echte bierenvriend bent! Neem een abonnement op onze speciaalbier-pakketten en krijg elke maand een pakket thuis gestuurd voor de laagste prijs!">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bierenvriend</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-<<<<<<< HEAD
         <nav>
             <p class="p-20 bg-red">Item</p>
         </nav>
-=======
-
->>>>>>> parent of 2a74894 (Update)
     </body>
 </html>
