--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,6 @@
 
     <body>
 
-    <!-- BLOCK - Navigation -->
     <section class="nav">
         <div class="container">
             <div class="navigation">
@@ -49,11 +48,11 @@
                         <path id="Icon_material-account-circle" data-name="Icon material-account-circle" d="M31.6,3a28.6,28.6,0,1,0,28.6,28.6A28.614,28.614,0,0,0,31.6,3Zm0,8.581a8.581,8.581,0,1,1-8.581,8.581A8.57,8.57,0,0,1,31.6,11.581Zm0,40.617a20.6,20.6,0,0,1-17.162-9.21c.086-5.692,11.441-8.81,17.162-8.81,5.692,0,17.076,3.118,17.162,8.81A20.6,20.6,0,0,1,31.6,52.2Z" transform="translate(-3 -3)"/>
                     </svg>
                 </a>
-                <a href="cart.html">
+                <!--<a href="cart.html">
                     <svg xmlns="http://www.w3.org/2000/svg" width="68.858" height="61.207" viewBox="0 0 68.858 61.207">
                         <path id="Icon_awesome-shopping-cart" data-name="Icon awesome-shopping-cart" d="M63.134,36.021l5.651-24.865a2.869,2.869,0,0,0-2.8-3.5H19.032l-1.1-5.357A2.869,2.869,0,0,0,15.126,0H2.869A2.869,2.869,0,0,0,0,2.869V4.782A2.869,2.869,0,0,0,2.869,7.651h8.354l8.4,41.056a6.7,6.7,0,1,0,8.015,1.024H52.7a6.693,6.693,0,1,0,7.6-1.244l.66-2.9a2.869,2.869,0,0,0-2.8-3.5H26.075l-.782-3.825H60.336A2.869,2.869,0,0,0,63.134,36.021Z"/>
                     </svg>
-                </a>
+                </a>-->
             </div>
         </div>
     </section>
@@ -106,23 +105,25 @@
         <div class="container">
             <div class="row">
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li><a href="voorwaarden.html">Algemene voorwaarden</a></li>
+                    <li>Privacy Policy</li>
+                    <li>FAQ</li>
                 </ul>
             </div>
             <div class="row">
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Facebook</li>
+                    <li>LinkedIn</li>
+                    <li>Instagram</li>
                 </ul>
             </div>
             <div class="row">
+                <!--<h4>Sitemap</h4>-->
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="bierlijst.html">Bierlijst</a></li>
+                    <li><a href="abonneren.html">Abonneren</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
