Één-na laatste blok afgerond
Alleen nog pakket samenstellen pagina aanmaken.

--- a/site/abonneren.html
+++ b/site/abonneren.html
@@ -234,5 +234,33 @@
         </div>
     </section>
 
+    <section class="footer">
+        <div class="container">
+            <div class="row">
+                <ul>
+                    <li><a href="voorwaarden.html">Algemene voorwaarden</a></li>
+                    <li>Privacy Policy</li>
+                    <li>FAQ</li>
+                </ul>
+            </div>
+            <div class="row">
+                <ul>
+                    <li>Facebook</li>
+                    <li>LinkedIn</li>
+                    <li>Instagram</li>
+                </ul>
+            </div>
+            <div class="row">
+                <!--<h4>Sitemap</h4>-->
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="bierlijst.html">Bierlijst</a></li>
+                    <li><a href="abonneren.html">Abonneren</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
