Website finishing! + Nieuwe documenten

--- a/site/abonneren.html
+++ b/site/abonneren.html
@@ -59,9 +59,11 @@
 
     <section class="hero">
         <div class="background">
-            <div class="container">
-                <div class="title">
-                    <h1>Word ook een bierenvriend!</h1>
+            <div class="background-cover">
+                <div class="container">
+                    <div class="title">
+                        <h1>Word ook een bierenvriend!</h1>
+                    </div>
                 </div>
             </div>
         </div>
@@ -168,7 +170,7 @@
                 </div>
             </div>
             <div class="block-holder">
-                <div class="block">
+                <a href="samenstellen.html" class="block">
                     <div class="content">
                         <div class="soort-abbo">
                             <div class="title">
@@ -181,8 +183,8 @@
                             <p>- Keuze uit 2 pakketgroottes</p>
                         </div>
                     </div>
-                </div>
-                <div class="block">
+                </a>
+                <a href="samenstellen.html" class="block">
                     <div class="content">
                         <div class="soort-abbo">
                             <div class="title">
@@ -196,8 +198,8 @@
                             <p>- Combineren van merken/stijlen mogelijk tot 6 verschillende soorten</p>
                         </div>
                     </div>
-                </div>
-                <div class="block">
+                </a>
+                <a href="samenstellen.html" class="block">
                     <div class="content">
                         <div class="soort-abbo">
                             <div class="title">
@@ -211,8 +213,8 @@
                             <p>- Exclusievere bieren en merken</p>
                         </div>
                     </div>
-                </div>
-                <div class="block">
+                </a>
+                <a href="samenstellen.html" class="block">
                     <div class="content mystery">
                         <div class="soort-abbo">
                             <div class="title">
@@ -229,7 +231,7 @@
                             <p>- Informatiekaartjes over de bieren en haar brouwerijen</p>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
