--- a/site/bierlijst.html
+++ b/site/bierlijst.html
@@ -59,9 +59,11 @@
 
     <section class="hero">
         <div class="background">
-            <div class="container">
-                <div class="title">
-                    <h1>Bierlijst</h1>
+            <div class="background-cover">
+                <div class="container">
+                    <div class="title">
+                        <h1>Bierlijst</h1>
+                    </div>
                 </div>
             </div>
         </div>
@@ -82,54 +84,64 @@
                 <div class="block">
                     <div class="content">
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Amstel Radler 0.0</p>
+                            <p>Amstel</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Heineken 0.0</p>
+                            <p>Heineken Brouwerij</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Leffe Blond 0.0</p>
+                            <p>Leffe Brouwerij</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Affligem Blond 0.0</p>
+                            <p>Affligem</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Grolsch Radler 0.0</p>
+                            <p>Koninklijke Grlosch</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Bavaria 0.0% Wit</p>
+                            <p>Royal Swinkels Family Brewers</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Amstel Radler 0.0</p>
+                            <p>Amstel</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Heineken 0.0</p>
+                            <p>Heineken Brouwerij</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Leffe Blond 0.0</p>
+                            <p>Leffe Brouwerij</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Affligem Blond 0.0</p>
+                            <p>Affligem</p>
+                            <p>0%</p>
+                        </div>
+                        <div class="regel">
+                            <p>Grolsch Radler 0.0</p>
+                            <p>Koninklijke Grlosch</p>
+                            <p>0%</p>
+                        </div>
+                        <div class="regel">
+                            <p>Bavaria 0.0% Wit</p>
+                            <p>Royal Swinkels Family Brewers</p>
+                            <p>0%</p>
                         </div>
 
                     </div>
@@ -138,54 +150,64 @@
                 <div class="block">
                     <div class="content">
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Amstel Radler 0.0</p>
+                            <p>Amstel</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Heineken 0.0</p>
+                            <p>Heineken Brouwerij</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Leffe Blond 0.0</p>
+                            <p>Leffe Brouwerij</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Affligem Blond 0.0</p>
+                            <p>Affligem</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Grolsch Radler 0.0</p>
+                            <p>Koninklijke Grlosch</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Bavaria 0.0% Wit</p>
+                            <p>Royal Swinkels Family Brewers</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Amstel Radler 0.0</p>
+                            <p>Amstel</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Heineken 0.0</p>
+                            <p>Heineken Brouwerij</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Leffe Blond 0.0</p>
+                            <p>Leffe Brouwerij</p>
+                            <p>0%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Affligem Blond 0.0</p>
+                            <p>Affligem</p>
+                            <p>0%</p>
+                        </div>
+                        <div class="regel">
+                            <p>Grolsch Radler 0.0</p>
+                            <p>Koninklijke Grlosch</p>
+                            <p>0%</p>
+                        </div>
+                        <div class="regel">
+                            <p>Bavaria 0.0% Wit</p>
+                            <p>Royal Swinkels Family Brewers</p>
+                            <p>0%</p>
                         </div>
 
                     </div>
@@ -210,19 +232,19 @@
                 <div class="block">
                     <div class="content">
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Lichtekooi</p>
+                            <p>Naeckte Brouwers</p>
+                            <p>1%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Cara Pils Alcoholarm</p>
+                            <p>Colryt Group</p>
+                            <p>1%</p>
                         </div>
                         <div class="regel">
-                            <p>Biernaam</p>
-                            <p>Brouwerij</p>
-                            <p>%</p>
+                            <p>Kemphaan Waterkasteel</p>
+                            <p>Stadsbrouwerij De Kemphaan</p>
+                            <p>2.5%</p>
                         </div>
                         <div class="regel">
                             <p>Biernaam</p>
