--- a/site/samenstellen.html
+++ b/site/samenstellen.html
@@ -59,9 +59,11 @@
 
     <section class="hero">
         <div class="background">
-            <div class="container">
-                <div class="title">
-                    <h1>Stel uw pakket samen</h1>
+            <div class="background-cover">
+                <div class="container">
+                    <div class="title">
+                        <h1>Stel uw pakket samen</h1>
+                    </div>
                 </div>
             </div>
         </div>
