--- a/site/index.html
+++ b/site/index.html
@@ -59,12 +59,14 @@
 
     <section class="hero">
         <div class="background">
-            <div class="container">
-                <div class="title">
-                    <h1>Neem vandaag nog een bier abonnement</h1>
-                </div>
-                <div class="button">
-                    <a href="abonneren.html">Eerste maand gratis!</a>
+            <div class="background-cover">
+                <div class="container">
+                    <div class="title">
+                        <h1>Neem vandaag nog een bier abonnement</h1>
+                    </div>
+                    <div class="button">
+                        <a href="abonneren.html">Eerste maand gratis!</a>
+                    </div>
                 </div>
             </div>
         </div>
